# Hololog-AI

./: .env.example  .gitignore  Dockerfile  README.md  WORKFLOW.md  claude.md  docker-compose.prod.yml  pyproject.toml  research.md  server_out.txt
.claude/: settings.json
.claude/agents/: ROOT_AGENT.md  agent_agent.md  api_agent.md  core_agent.md  plan-validator.md  rag-builder.md  rag_agent.md  scripts_agent.md
.claude/skills/: ingest-rag.md  run.md  validate-plan.md
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/agent/: graph.py  nodes.py  state.py
app/api/: agent.py
app/core/: client.py  config.py
app/rag/: ingest.py  retriever.py
app/scoring/: kamis.py  metrics.py  scorer.py  seasonal.py
scripts/: cli.py  log_research.py
test/: cli.py  mock_backend.py
