[project]
name = "hololog-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "holidays>=0.50",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-anthropic>=1.4.6",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.15",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
]
